<resources>
    <string name="app_name">Envision</string>
    <string name="capture">CAPTURE</string>
    <string name="capture_photo">CAPTURE PHOTO</string>
    <string name="library">LIBRARY</string>
    <string name="progress">OCR in progress...</string>
    <string name="save_text">SAVE TEXT TO LIBRARY</string>
    <string name="text_saved">Text saved to library!</string>
    <string name="go_to_library">GO TO LIBRARY</string>
    <string name="capture_photo_description">Press to take a photo</string>
    <string name="save_button_description">Press to save this text to your library</string>
    <string name="permissions_not_granted">"Permissions not granted by the user.</string>
    <string name="failed_usecase_binding">Use case binding failed</string>
    <string name="empty_text">Nothing yet in the library :)</string>
</resources>